<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplyJobActivity"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/invoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_job_text"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:id="@+id/staticJobName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/job_name_text"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/job_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:id="@+id/staticCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/job_category_text"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/job_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticFee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/job_fee_text"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/job_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"/>
    </LinearLayout>

    <TextView
        android:id="@+id/staticPayMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:text="@string/payment_method_text"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp">
        <RadioButton
            android:id="@+id/eWallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_wallet_text" />
        <RadioButton
            android:id="@+id/bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bank_text" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/referral_code_text"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/referral_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/referral_code_hint"
            android:textSize="16sp"
            android:autofillHints="@string/referral_code_text"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticTotalFee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/total_fee_text"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/total_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"/>
    </LinearLayout>

    <Button
        android:id="@+id/count"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/count_text"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/apply_now_text"
        android:textStyle="bold"
        android:layout_gravity="center"/>

</LinearLayout>