<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishedJobActivity"
    android:orientation="vertical"
    android:padding="24dp"
    android:id="@+id/layout_finished">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/invoice_id"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp">
        <TextView
            android:id="@+id/staticJobseekerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/jobseeker_name_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/jobseeker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticInvoiceDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/invoice_date_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/invoice_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticPaymentType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/payment_type_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticInvoiceStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/invoice_status_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/invoice_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/text_view_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticReferralCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/referral_code_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/referral_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/no_referral_code"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/staticJobNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/job_name_title_text"
        android:layout_marginTop="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/job_name_invoice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/job_name_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/fee_invoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/fee_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@android:color/darker_gray"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/line_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/staticTotalFee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/total_fee_text"
            android:layout_marginTop="12dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/total_fee_invoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/total_fee_text"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/cancel_text"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"/>

        <Button
            android:id="@+id/btnFinish"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/finish_text"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</LinearLayout>