<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_text"
                android:textSize="32sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/staticJobseekerId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/jobseeker_id_text"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/jobseeker_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/jobseeker_id"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/staticJobseekerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/name_text"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/jobseeker_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/text_view_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">
                <TextView
                    android:id="@+id/staticJobseekerEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/jobseeker_email_text"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/jobseeker_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/text_view_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/staticJobseekerPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/jobseeker_password_text"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/jobseeker_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/text_view_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/staticJobseekerJoinDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/jobseeker_join_date_text"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/jobseeker_join_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/text_view_text"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:text="@string/remove_text"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnLogout"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:text="@string/logout_text"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>