<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/jworklogo"
            android:contentDescription="@string/logo_description"/>

        <Button
            android:id="@+id/btnApplyJobHome"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/apply_job_text"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnHistoryHome"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/applied_job_text"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>

  </androidx.drawerlayout.widget.DrawerLayout>