<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextNameLayoutRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/name_hint"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPersonNameRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:lines="1"
            android:autofillHints="@string/name_hint"
            android:ems="10"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailLayoutRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        app:errorEnabled="true"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextNameLayoutRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameLayoutRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddressRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_hint"
            android:ems="10"
            android:freezesText="false"
            android:gravity="start|center"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPasswordLayoutRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        app:errorEnabled="true"
        app:passwordToggleContentDescription="@string/onboarding_toggle_description_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="?colorAccent"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailLayoutRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLayoutRegister">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPasswordRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:lines="1"
            android:autofillHints="@string/password_hint"
            android:ems="10"
            android:freezesText="false"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/register_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordLayoutRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLayoutRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>